--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Hiring Mine</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="shortcut icon" href="images-removebg-preview (1).png" type="image/x-icon">
+  <link rel="shortcut icon" href="././assets/images-removebg-preview (1).png" type="image/x-icon">
 
 </head>
 
@@ -15,16 +15,16 @@
   <header class="header">
     <div class="nav-container">
       <a href="#" class="logo">
-        <img src="./Hiring Mine Logo-453a72d3.png" alt="Logo" />
+        <img src="././assets/Hiring Mine Logo-453a72d3.png" alt="Logo" />
       </a>
 
       <nav class="nav-links">
-        <a href="#">About</a>
-        <a href="#">Jobs</a>
+        <a href="#">About Us</a>
+        <a href="https://www.hiringmine.com/jobsearch">Jobs</a>
         <a href="#">Mentorship</a>
         <a href="#">Practice</a>
         <a href="#">Login</a>
-        <a href="#">Join Now</a>
+        <a href="https://www.hiringmine.com/signup">Join Now</a>
         <a href="#" class="highlight-role">Business</a>
         <div class="dropdown">
           <a href="#" class="dropbtn">More <i class="fa fa-caret-down"></i></a>
@@ -48,10 +48,10 @@
       <!-- Sidebar for Mobile -->
       <div class="sidebar" id="sidebar">
         <div class="top">
-          <img src="./Hiring Mine Logo-453a72d3.png" alt="Logo" />
+          <img src="././assets/Hiring Mine Logo-453a72d3.png" alt="Logo" />
           <button id="closeBtn">☰</button>
         </div>
-        <a href="#">About</a>
+        <a href="#">About Us</a>
         <a href="#">Jobs</a>
         <a href="#">Mentorship</a>
         <a href="#">Practice</a>
@@ -81,15 +81,11 @@
       </h1>
     </section>
     <section class="hero-image">
-      <img src="./Life-at-HiringMine-1b00974f (1).png" alt="" />
+      <img src="././assets/Life-at-HiringMine-1b00974f (1).png" alt="" />
     </section>
-
-
-
-
     <section class="boxes">
       <div class="box1">
-        <img src="./sufiyan1-c9f319db.png" alt="" class="box1-img" />
+        <img src="././assets/sufiyan1-c9f319db.png" alt="" class="box1-img" />
         <div class="box-text">
           <h2>
             Muhammad Sufiyan,<span class="highlight-role align-left">(Founder & CEO)</span>
@@ -121,7 +117,7 @@
         </div>
       </div>
       <div class="box1 bx2">
-        <img src="./Jaffar1-fffda049.png" alt="" class="box1-img" />
+        <img src="././assets/Jaffar1-fffda049.png" alt="" class="box1-img" />
         <div class="box-text">
           <h2>
             Jaffar Aman,<span class="highlight-role">
@@ -154,22 +150,22 @@
       <h2 class="section-heading">Meet the <span class="highlight-role">Hiring Mine Team</span></h2>
       <div class="team-pics">
         <div class="team-member">
-          <img src="./sufiyan1-c9f319db.png" alt="Muhammad Sufiyan">
+          <img src="././assets/sufiyan1-c9f319db.png" alt="Muhammad Sufiyan">
           <h3>Muhammad Sufiyan</h3>
           <p>Founder & CEO</p>
         </div>
         <div class="team-member">
-          <img src="./Jaffar1-fffda049.png" alt="Jaffar Aman">
+          <img src="././assets/Jaffar1-fffda049.png" alt="Jaffar Aman">
           <h3>Jaffar Aman</h3>
           <p>Co-Founder & CTO</p>
         </div>
         <div class="team-member">
-          <img src="./1727343749985.jpg" alt="Muhammad Hasan">
+          <img src="././assets/1727343749985.jpg" alt="Muhammad Hasan">
           <h3>Muhammad Hasan</h3>
           <p>MERN Stack Developer</p>
         </div>
         <div class="team-member">
-          <img src="./WhatsApp_Image_2025-05-19_at_4.03.25_PM_ex7ygl.jpg" alt="Ayan Sheikh">
+          <img src="././assets/WhatsApp_Image_2025-05-19_at_4.03.25_PM_ex7ygl.jpg" alt="Ayan Sheikh">
           <h3>Ayan Sheikh</h3>
           <p>Mobile Application Developer</p>
         </div>
@@ -178,22 +174,22 @@
     <section class="gallery-section">
       <h2 class="gallery-heading ">Culture at <span class="highlight-role">Hiring Mine</span></h2>
       <div class="image-gallery">
-        <img src="./img.jpg" alt="Culture 1" class="img1">
-        <img src="./img2.jpg" alt="Culture 2" class="img2">
-        <img src="./img3.jpg" alt="Culture 3" class="img3">
-        <img src="./img4.jpg" alt="Culture 4" class="img4">
-        <img src="./img5.jpg" alt="Culture 5" class="img5">
-        <img src="./img6.jpg" alt="Culture 6" class="img6">
-        <img src="./img7.jpg" alt="Culture 7" class="img7">
-        <img src="./img8.jpg" alt="Culture 8" class="img8">
-        <img src="./img9.jpg" alt="Culture 9" class="img9">
+        <img src="././assets/img.jpg" alt="Culture 1" class="img1">
+        <img src="././assets/img2.jpg" alt="Culture 2" class="img2">
+        <img src="././assets/img3.jpg" alt="Culture 3" class="img3">
+        <img src="././assets/img4.jpg" alt="Culture 4" class="img4">
+        <img src="././assets/img5.jpg" alt="Culture 5" class="img5">
+        <img src="././assets/img6.jpg" alt="Culture 6" class="img6">
+        <img src="././assets/img7.jpg" alt="Culture 7" class="img7">
+        <img src="././assets/img8.jpg" alt="Culture 8" class="img8">
+        <img src="././assets/img9.jpg" alt="Culture 9" class="img9">
       </div>
     </section>
   </div>
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-left">
-        <img src="./download.png" alt="">
+        <img src="././assets/download.png" alt="">
         <p>Built with ❤️ in Pakistan for the World.</p>
         <p>HiringMine bridges top talent and visionary companies through a smart, streamlined platform. Empowering
           candidates to shine, and employers to hire better — faster. Your next opportunity, powered by technology and
@@ -211,7 +207,7 @@
       <div class="footer-right">
         <h4>Contact Us</h4>
         <p><i class="fas fa-envelope"></i> portal.hiringmine@gmail.com</p>
-        <a href="./index.html">Life at HiringMine</a><br>
+        <a href="./index.html" style=" position: relative; top: 10px;">Life at HiringMine</a><br>
         <a href="https://www.hiringmine.com/about-hiringmine">About HiringMine</a>
       </div>
     </div>
